Add 3 new recipes to the site
Chocolate cake, Garlic and oil pasta and farofa. All the images
were placed on the /img folder.

--- a/recipes/chocolate_cake.html
+++ b/recipes/chocolate_cake.html
@@ -8,5 +8,24 @@
 </head>
 <body>
     <h1>Chocolate Cake</h1>
+    <img src="../img/chocolate-cake.jpg" alt="chocolate-cake"
+    width="300">
+    <h3>Ingredients</h3>
+    <ul>
+        <li>2 cups of flour</li>
+        <li>1 cup of sugar</li>
+        <li>3 eggs</li>
+        <li>1 cup coca powder</li>
+        <li>1 teaspoon of baking powder</li>
+        <li>3 tablespoons of oil</li>
+    </ul>
+
+    <h3>Steps</h3>
+    <ol>
+        <li>First, spread oil on the baking tray.</li>
+        <li>Then, mix up all the dry ingredients.</li>
+        <li>Add the wet ingredients and mix it all up together.</li>
+        <li>Pour the mixture on the baking tray and bake it on 180°C for 45 minutes</li>
+    </ol>
 </body>
 </html>
