--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <h3>Recipes:</h3>
     <ul>
         <li><a href="recipes/chocolate_cake.html">Chocolate Cake</a></li>
+        <li><a href="recipes/garlic-and-oil-pasta.html">Garlic and Oil Pasta</a></li>
+        <li><a href="recipes/farofa.html">Farofa</a></li>
     </ul>
 </body>
 </html>
