--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Odin Recipes</title>
+    <title>Lazy Shef Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Lazy Shef Recipes</h1>
+    <p><em>You will probably regret it!</em></p>
 
+    <img src="img/chef.jpg" alt="shef" width="300">
     <h3>Recipes:</h3>
     <ul>
         <li><a href="recipes/chocolate_cake.html">Chocolate Cake</a></li>
