Fix grammar issues

--- a/recipes/chocolate_cake.html
+++ b/recipes/chocolate_cake.html
@@ -10,6 +10,8 @@
     <h1>Chocolate Cake</h1>
     <img src="../img/chocolate-cake.jpg" alt="chocolate-cake"
     width="300">
+    <p>A crazy simple (and completely random) recipe that is well suited for birthday parties. But watch out if you suffer from migraine, this will be your doom.</p>
+
     <h3>Ingredients</h3>
     <ul>
         <li>2 cups of flour</li>
@@ -22,10 +24,10 @@
 
     <h3>Steps</h3>
     <ol>
-        <li>First, spread oil on the baking tray.</li>
+        <li>First, spread the oil on the baking tray.</li>
         <li>Then, mix up all the dry ingredients.</li>
         <li>Add the wet ingredients and mix it all up together.</li>
-        <li>Pour the mixture on the baking tray and bake it on 180°C for 45 minutes</li>
+        <li>Pour the mixture onto the baking tray and bake it at 180°C for 45 minutes</li>
     </ol>
 </body>
 </html>
