--- a/recipes/farofa.html
+++ b/recipes/farofa.html
@@ -9,20 +9,21 @@
 <body>
     <h1>Farofa</h1>
     <img src="../img/farofa.jpg" alt="farofínea" width="300">
-
+    <p>A really nice Brazilian side dish that goes really well if Feijoada, Churrasco, or even your day-to-day rice and beans meal.</p>
+    
     <h3>Ingredients</h3>
     <ul>
         <li>200 g of mandioca flour</li>
         <li>60 ml of olive oil or 100g of butter</li>
         <li>2 heads of garlic</li>
         <li>1/2 of an onion</li>
-        <li>Salt to tast</li>
+        <li>Salt to taste</li>
     </ul>
 
     <h3>Steps</h3>
     <ol>
         <li>Add the olive oil or butter to a pan on medium heat.</li>
-        <li>Add the onions and shortly after add the garlic.</li>
+        <li>Add the onions and shortly after, add the garlic.</li>
         <li>Add a pinch of salt.</li>
         <li>When the garlic and onion are golden, lower the heat and add the mandioca flour.</li>
         <li>Add salt.</li>
