--- a/recipes/garlic-and-oil-pasta.html
+++ b/recipes/garlic-and-oil-pasta.html
@@ -9,6 +9,8 @@
 <body>
     <h1>Garlic and Oil Pasta</h1>
     <img src="../img/garlic-and-oil-pasta.jpg" alt="garlic and oil pasta" width="300">
+    <p>Wonderful in its simplicity, the garlic and oil pasta will be the star of your lazy Sunday. Easy and quick to make and can be made with only one pan. Goes well with everything... Wine or coke, with cheese, with chicken. Add ketchup if you like, I don't care.</p>
+
     <h3>Ingredients</h3>
     <ul>
         <li>300g of pasta (of your liking)</li>
