Add backlinks to home page on recipe pages

--- a/recipes/farofa.html
+++ b/recipes/farofa.html
@@ -7,6 +7,7 @@
     <title>Farofa</title>
 </head>
 <body>
+    <a href="../index.html">Back to Home Page</a>
     <h1>Farofa</h1>
     <img src="../img/farofa.jpg" alt="farofínea" width="300">
     <p>A really nice Brazilian side dish that goes really well if Feijoada, Churrasco, or even your day-to-day rice and beans meal.</p>
