--- a/recipes/chocolate_cake.html
+++ b/recipes/chocolate_cake.html
@@ -7,6 +7,7 @@
     <title>Chocolate Cake</title>
 </head>
 <body>
+    <a href="../index.html">Back to Home Page</a>
     <h1>Chocolate Cake</h1>
     <img src="../img/chocolate-cake.jpg" alt="chocolate-cake"
     width="300">
