Add style to HTML pages

--- a/recipes/chocolate_cake.html
+++ b/recipes/chocolate_cake.html
@@ -4,31 +4,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Chocolate Cake</title>
 </head>
 <body>
     <a href="../index.html">Back to Home Page</a>
-    <h1>Chocolate Cake</h1>
+    <h1 class="page-title">Chocolate Cake</h1>
     <img src="../img/chocolate-cake.jpg" alt="chocolate-cake"
     width="300">
     <p>A crazy simple (and completely random) recipe that is well suited for birthday parties. But watch out if you suffer from migraine, this will be your doom.</p>
 
-    <h3>Ingredients</h3>
-    <ul>
-        <li>2 cups of flour</li>
-        <li>1 cup of sugar</li>
-        <li>3 eggs</li>
-        <li>1 cup coca powder</li>
-        <li>1 teaspoon of baking powder</li>
-        <li>3 tablespoons of oil</li>
-    </ul>
-
-    <h3>Steps</h3>
-    <ol>
-        <li>First, spread the oil on the baking tray.</li>
-        <li>Then, mix up all the dry ingredients.</li>
-        <li>Add the wet ingredients and mix it all up together.</li>
-        <li>Pour the mixture onto the baking tray and bake it at 180°C for 45 minutes</li>
-    </ol>
+    <div class="container">
+        <h3>Ingredients</h3>
+        <ul>
+            <li>2 cups of flour</li>
+            <li>1 cup of sugar</li>
+            <li>3 eggs</li>
+            <li>1 cup coca powder</li>
+            <li>1 teaspoon of baking powder</li>
+            <li>3 tablespoons of oil</li>
+        </ul>
+    </div>
+    
+    <div class="container">
+        <h3>Steps</h3>
+        <ol>
+            <li>First, spread the oil on the baking tray.</li>
+            <li>Then, mix up all the dry ingredients.</li>
+            <li>Add the wet ingredients and mix it all up together.</li>
+            <li>Pour the mixture onto the baking tray and bake it at 180°C for 45 minutes</li>
+        </ol>
+    </div>
+    
 </body>
 </html>
