--- a/recipes/garlic-and-oil-pasta.html
+++ b/recipes/garlic-and-oil-pasta.html
@@ -4,31 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style.css">
     <title>Garlic and oil pasta</title>
 </head>
 <body>
     <a href="../index.html">Back to Home Page</a>
-    <h1>Garlic and Oil Pasta</h1>
+    <h1 class="page-title">Garlic and Oil Pasta</h1>
     <img src="../img/garlic-and-oil-pasta.jpg" alt="garlic and oil pasta" width="300">
     <p>Wonderful in its simplicity, the garlic and oil pasta will be the star of your lazy Sunday. Easy and quick to make and can be made with only one pan. Goes well with everything... Wine or coke, with cheese, with chicken. Add ketchup if you like, I don't care.</p>
-
-    <h3>Ingredients</h3>
-    <ul>
-        <li>300g of pasta (of your liking)</li>
-        <li>7 heads of garlic</li>
-        <li>1 Onion</li>
-        <li>Salt to taste</li>
-        <li>20 ml of olive oil</li>
-        <li>Seasoning to taste</li>
-    </ul>
-
-    <h3>Steps</h3>
-    <ol>
-        <li>Cook up the pasta on a large pan filled up half-full of salted boiling water.</li>
-        <li>In a frying pan add the olive oil, chopped garlic and chopped onion.</li>
-        <li>Fry the garlic and Onion until it looks golden.</li>
-        <li>When the pasta is cooked add it directly to the frying pan.</li>
-        <li>Add all the seasoning.</li>
-    </ol>
+    <div class="container">
+        <h3>Ingredients</h3>
+        <ul>
+            <li>300g of pasta (of your liking)</li>
+            <li>7 heads of garlic</li>
+            <li>1 Onion</li>
+            <li>Salt to taste</li>
+            <li>20 ml of olive oil</li>
+            <li>Seasoning to taste</li>
+        </ul>
+    </div>
+    <div class="container">
+        <h3>Steps</h3>
+        <ol>
+            <li>Cook up the pasta on a large pan filled up half-full of salted boiling water.</li>
+            <li>In a frying pan add the olive oil, chopped garlic and chopped onion.</li>
+            <li>Fry the garlic and Onion until it looks golden.</li>
+            <li>When the pasta is cooked add it directly to the frying pan.</li>
+            <li>Add all the seasoning.</li>
+        </ol>
+    </div>
 </body>
 </html>
